Implémentation de la barre de navigation. marche avec les fragment mais pas encore avec les activités

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:name=".ForumActivity"
             android:exported="true"/>
         <activity
+            android:name=".SetupProfileActivity"
+            android:exported="true"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
