--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </provider>
 
         <activity
-            android:name=".ForumActivity"
+            android:name=".ChatActivity"
             android:exported="true"/>
         <activity
             android:name=".SetupProfileActivity"
