problème de image de fond

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
 
         <activity
             android:name=".ChatActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="true"/>
         <activity
             android:name=".ForumActivity"
