adding ip-address activity : set ip + load it in preferences works

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,26 +16,29 @@
         android:theme="@style/Theme.BlaBlApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
         <provider
-            android:authorities="com.blablapp.blablapp"
             android:name="androidx.core.content.FileProvider"
+            android:authorities="com.blablapp.blablapp"
             android:exported="false"
             android:grantUriPermissions="true">
-
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/fileprovider"/>
+                android:resource="@xml/fileprovider" />
         </provider>
 
         <activity
             android:name=".ChatActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".ForumActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".AboutUsActivity"
-            android:exported="true"/>
+            android:exported="true" />
+        <activity
+            android:name=".IpAddress"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
