--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,16 +28,20 @@
 
         <activity
             android:name=".ChatActivity"
-            android:exported="true"/>
+            android:exported="true"
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ForumActivity"
-            android:exported="true"/>
+            android:exported="true"
+            tools:ignore="LockedOrientationActivity"/>
         <activity
             android:name=".AboutUsActivity"
-            android:exported="true"/>
+            android:exported="true"
+            tools:ignore="LockedOrientationActivity"/>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
